force-app/main/default/objects/redwing__Training_Plan_Achievement__c/redwing__Training_Plan_Achievement__c.object-meta.xml
<CustomObject>
    <label>Learning Plan Achievement</label>
    <nameField>
        <displayFormat>LPA-{0000000}</displayFormat>
        <label>Learning Plan Achievement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Plan Achievements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>