force-app/main/default/objects/redwing__Training_Plan_Achievement__c/fields/redwing__Achievement__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Achievement</label>
    <referenceTo>redwing__Achievement__c</referenceTo>
    <relationshipLabel>Learning Plan Achievements</relationshipLabel>
    <relationshipName>Training_Plan_Achievements</relationshipName>
    <type>Lookup</type>
</CustomField>