force-app/main/default/objects/redwing__Training_Plan_Achievement__c/fields/redwing__Main_Achievement__c.field-meta.xml
<CustomField>
    <fullName>redwing__Main_Achievement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Main Achievement</label>
    <type>Checkbox</type>
</CustomField>