force-app/main/default/objects/redwing__Training_Plan_Achievement__c/fields/redwing__Training_Plan_Section__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Plan_Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Plan Section</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only sections from the parent Learning Plan can be selected</errorMessage>
        <filterItems>
            <field>redwing__Training_Plan_Section__c.redwing__Training_Plan__c</field>
            <operation>equals</operation>
            <valueField>$Source.redwing__Training_Plan__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>redwing__Training_Plan_Section__c</referenceTo>
    <relationshipLabel>Learning Plan Achievements</relationshipLabel>
    <relationshipName>Training_Plan_Achievements</relationshipName>
    <type>Lookup</type>
</CustomField>