force-app/main/default/objects/redwing__Training_Plan_Achievement__c/validationRules/redwing__Achievement_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>redwing__Achievement_Required</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNULL(redwing__Achievement__c ) || ISBLANK(redwing__Achievement__c ))</errorConditionFormula>
    <errorDisplayField>redwing__Achievement__c</errorDisplayField>
    <errorMessage>You must enter a value</errorMessage>
</ValidationRule>